modernized localization